# comics-mcp

./: .gitignore  README.md  pyproject.toml  tool_manifest.json
comics_mcp/: mcp_server.py
comics_mcp/core/: protocol.py  registry.py  types.py
comics_mcp/plugins/comicvine/: comicvine.py
comics_mcp/utils/: env_util.py  html_cleaner.py
